@@ -5,7 +5,10 @@ module ActiveScaffold::Bridges
       require File.join(File.dirname(__FILE__), "date_picker/ext.rb")
     end
     def self.install?
-      ActiveScaffold.js_framework == :jquery
+      ActiveScaffold.js_framework == :jquery && jquery_ui_included?
+    end
+    def self.jquery_ui_included?
+      Jquery::Rails.const_defined?('JQUERY_UI_VERSION') || Jquery.const_defined?('Ui')
     end
     def self.localization
       "jQuery(function($){
